WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
200709
'font-family: initial' acts like 'font-family: inherit' instead of getting the initial value
https://bugs.webkit.org/show_bug.cgi?id=200709
Summary
'font-family: initial' acts like 'font-family: inherit' instead of getting th...
Simon Pieters (:zcorpan)
Reported
2019-08-14 05:10:22 PDT
See
https://github.com/w3c/csswg-drafts/issues/4192
(and in particular the first comment by fantasai) Test:
http://software.hixie.ch/utilities/js/live-dom-viewer/saved/7120
<!DOCTYPE html> <style> div { font-family: fantasy; } span { font-family: initial } </style> The following two lines should look the same:<br> test <div> <span>test</span> </div> This works as expected in Blink and Gecko.
Attachments
screenshot showing issue in Safari TP
(349.81 KB, image/png)
2022-01-17 08:10 PST
,
Matt Sephton
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-08-14 10:02:03 PDT
<
rdar://problem/54306281
>
Matt Sephton
Comment 2
2022-01-17 08:10:19 PST
Created
attachment 449334
[details]
screenshot showing issue in Safari TP Can confirm this is still an issue on Safari 14, 15 and TP.
Tim Nguyen (:ntim)
Comment 3
2024-11-18 00:47:20 PST
https://searchfox.org/wubkat/rev/d45649fa32a499702c30474e94bd6843c4c67849/Source/WebCore/style/StyleBuilderCustom.h#746-747
Removing `if (!initialDesc.firstFamily().isEmpty())` would probably fix this bug. We should add a WPT to ensure this is tested.
Alexsander Borges Damaceno
Comment 4
2024-11-24 23:20:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37115
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug