Fix: font-family: initial should apply to the font instead of inherit from ancestor https://bugs.webkit.org/show_bug.cgi?id=200709

Reviewed by NOBODY (OOPS!).

As 'initialDesc.firstFamily().isEmpty()' was returning 0,
we were incorrectly skipping the font family assignment in 'setFamilies',
causing the font family of the previous ancestor to be applied instead.

* LayoutTests/fast/text/font-family-initial-01-expected.txt: Added.
* LayoutTests/fast/text/font-family-initial-01.html: Added.
* Source/WebCore/style/StyleBuilderCustom.h:
(WebCore::Style::BuilderCustom::applyInitialFontFamily):